MiniBlink/wkedefine.h

typedef unsigned char bool;
typedef void* jsExecState;
typedef JsExecStateInfo* jsExecState;
typedef __int64 jsValue;
typedef wke::CWebView* wkeWebView;
typedef wke::CString* wkeString;
typedef struct _tagWkeWebView* wkeWebView;
typedef struct _tagWkeString* wkeString;
typedef struct {
	wkeProxy proxy;
	unsigned int mask;
} wkeSettings;
typedef enum {
	WKE_NAVIGATION_TYPE_LINKCLICK,
	WKE_NAVIGATION_TYPE_FORMSUBMITTE,
	WKE_NAVIGATION_TYPE_BACKFORWARD,
	WKE_NAVIGATION_TYPE_RELOAD,
	WKE_NAVIGATION_TYPE_FORMRESUBMITT,
	WKE_NAVIGATION_TYPE_OTHER
} wkeNavigationType;
typedef struct {
	int x;
	int y;
	int width;
	int height;

	bool menuBarVisible;
	bool statusBarVisible;
	bool toolBarVisible;
	bool locationBarVisible;
	bool scrollbarsVisible;
	bool resizable;
	bool fullscreen;
} wkeWindowFeatures;
typedef void(*wkePaintUpdatedCallback)(wkeWebView webView, void* param, const HDC hdc, int x, int y, int cx, int cy);
typedef bool(*wkeNavigationCallback)(wkeWebView webView, void* param, wkeNavigationType navigationType, const wkeString url);
typedef wkeWebView(*wkeCreateViewCallback)(wkeWebView webView, void* param, wkeNavigationType navigationType, const wkeString url, const wkeWindowFeatures* windowFeatures);
typedef void(*wkeDocumentReadyCallback)(wkeWebView webView, void* param);
typedef wkeWebView(*wkeCreateViewCallback)(wkeWebView webView, void* param, wkeNavigationType navigationType, const wkeString url, const wkeWindowFeatures* windowFeatures);
typedef void(*wkeDocumentReadyCallback)(wkeWebView webView, void* param);
typedef enum {
	WKE_LOADING_SUCCEEDED,
	WKE_LOADING_FAILED,
	WKE_LOADING_CANCELED
} wkeLoadingResult;
typedef void(*wkeLoadingFinishCallback)(wkeWebView webView, void* param, const wkeString url, wkeLoadingResult result, const wkeString failedReason);
typedef enum {
	wkeLevelDebug = 4,
	wkeLevelLog = 1,
	wkeLevelInfo = 5,
	wkeLevelWarning = 2,
	wkeLevelError = 3,
	wkeLevelRevokedError = 6,
	wkeLevelLast = wkeLevelInfo
} wkeConsoleLevel;
//wkeNet--------------------------------------------------------------------------------------
typedef bool(*wkeLoadUrlBeginCallback)(wkeWebView webView, void* param, const char *url, void *job);
typedef void(*wkeLoadUrlEndCallback)(wkeWebView webView, void* param, const char *url, void *job, void* buf, int len);
typedef jsValue(JS_CALL* jsNativeFunction) (jsExecState es);
typedef jsValue(*wkeJsNativeFunction) (jsExecState es, void* param);
WKE_FOR_EACH_DEFINE_FUNCTION(WKE_DEFINE_ITERATOR0, WKE_DEFINE_ITERATOR1, WKE_DEFINE_ITERATOR2, \
	WKE_DEFINE_ITERATOR3, WKE_DEFINE_ITERATOR4, WKE_DEFINE_ITERATOR5, WKE_DEFINE_ITERATOR6, WKE_DEFINE_ITERATOR11)

	typedef void (WKE_CALL_TYPE *FN_wkeInitializeEx)(const wkeSettings* settings);